fix html validation errors. Wrap with <ins> instead of <span>, since ins has a transparent content model and can wrap block elements as well. Note that ins is typically underlined by default, so text-decoration must be set to none

--- a/examples/chat/chat.styl
+++ b/examples/chat/chat.styl
@@ -7,8 +7,13 @@ border-radius() {
 body {
   background: #bbb;
   color: #000;
-  font: 13px/1.231 arial,sans-serif;
   overflow: hidden;
+}
+body,h1,h2,h3,h4,input,pre,select,textarea,th {
+  font: 13px/1.231 arial,sans-serif;
+}
+ins {
+  text-decoration: none;
 }
 body,fieldset,form,h1,h2,h3,h4,input,ul,li,ol,p,pre,td,textarea,th {
   margin: 0;
@@ -22,11 +27,6 @@ table {
 }
 fieldset,img {
   border: 0;
-}
-h1,h2,h3,h4,input,pre,select,textarea,th {
-  font: 1em f;
-  line-height: inherit;
-  font-family: inherit;
 }
 
 li {
